--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
                 </div>
                 <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
             </div>
-            <nav>
+            <nav class="main-navbar">
                 <ul>
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
