--- a/views/register.html
+++ b/views/register.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
-		<header>
+		<header class="register-header">
 			<div class="top-header">
 				<div class="logo">
 					<img
@@ -60,7 +60,7 @@
 		<main>
 			<form action="/" method="GET" class="create-form">
                 <div class="control-formulario">
-                    <input type="text" name="nombreCompleto" placeholder="Aca va tu nombre" class="control" >
+                    <input type="text" name="nombreCompleto" placeholder="Nombre de usuario" class="control" >
                 </div>
                 <div class="control-formulario">
                     <input type="text" name="usuario" placeholder="Nombre de usuario" class="control" >
@@ -99,34 +99,36 @@
                 <button type="reset" class="general-button">Borrar</button>
             </form>
 		</main>
-		<footer>
-			<div class="credit_card">
-				<i class="fas fa-credit-card"></i>
-				<h4>Pagá con tarjeta o en efectivo</h4>
-				<p class="">
-					Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
-					efectivo en puntos de pago. ¡Y siempre es seguro!
-				</p>
-			</div>
-
-			<div class="gift">
-				<i class="fas fa-gift"></i>
-				<h4>Envío gratis desde $ 2.500</h4>
-				<p>
-					Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
-					miles de productos. Es un beneficio de Mercado Puntos.
-				</p>
-			</div>
-
-			<div class="securityIcon">
-				<i class="fas fa-user-shield"></i>
-				<h4>Seguridad, de principio a fin</h4>
-				<p>
-					¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
-					hacer, porque estás siempre protegid@.
-				</p>
-			</div>
-
+		<body>
+			<footer>
+			<section>
+				<div class="credit_card">
+					<i class="fas fa-credit-card"></i>
+					<h4>Pagá con tarjeta o en efectivo</h4>
+					<p class="">
+						Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
+						efectivo en puntos de pago. ¡Y siempre es seguro!
+					</p>
+				</div>
+	
+				<div class="gift">
+					<i class="fas fa-gift"></i>
+					<h4>Envío gratis desde $ 2.500</h4>
+					<p>
+						Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
+						miles de productos. Es un beneficio de Mercado Puntos.
+					</p>
+				</div>
+	
+				<div class="securityIcon">
+					<i class="fas fa-user-shield"></i>
+					<h4>Seguridad, de principio a fin</h4>
+					<p>
+						¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
+						hacer, porque estás siempre protegid@.
+					</p>
+				</div>
+			</section>
 			<p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
 		</footer>
 	</body>
