--- a/views/home.html
+++ b/views/home.html
@@ -16,48 +16,48 @@
 	</head>
 	<body>
 		<header>
-			<div class="top-header">
-				<div class="logo">
-					<img
-						src="images/logo-mercado-liebre.svg"
-						alt="Logo de MercadoLiebre"
-					/>
+				<div class="top-header">
+					<div class="logo">
+						<img
+							src="images/logo-mercado-liebre.svg"
+							alt="Logo de MercadoLiebre"
+						/>
+					</div>
+					<div class="form" action="#" method="GET">
+						<div class="input">Buscar productos, marcas y más</div>
+						<div class="submit"><i class="fa fa-search"></i></div>
+					</div>
+					<p>
+						<i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta
+						de crédito
+					</p>
 				</div>
-				<div class="form" action="#" method="GET">
-					<div class="input">Buscar productos, marcas y más</div>
-					<div class="submit"><i class="fa fa-search"></i></div>
+				<nav class="main-navbar">
+					<ul class="navbar-1">
+						<li><a href="#">Ofertas</a></li>
+						<li><a href="#">Tiendas Oficiales</a></li>
+						<li><a href="#">Vender</a></li>
+						<li><a href="#">Ayuda</a></li>
+					</ul>
+					<ul class="navbar-2">
+						<li>
+							<a href="/register"
+								>Creá tu cuenta <i class="far fa-id-card"></i
+							></a>
+						</li>
+						<li>
+							<a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+						</li>
+						<li>
+							<a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a>
+						</li>
+					</ul>
+				</nav>
+				<div class="burger-menu">
+					<i class="fa fa-bars burger"></i>
 				</div>
-				<p>
-					<i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta
-					de crédito
-				</p>
-			</div>
-			<nav class="main-navbar">
-				<ul class="navbar-1">
-					<li><a href="#">Ofertas</a></li>
-					<li><a href="#">Tiendas Oficiales</a></li>
-					<li><a href="#">Vender</a></li>
-					<li><a href="#">Ayuda</a></li>
-				</ul>
-				<ul class="navbar-2">
-					<li>
-						<a href="/register"
-							>Creá tu cuenta <i class="far fa-id-card"></i
-						></a>
-					</li>
-					<li>
-						<a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-					</li>
-					<li>
-						<a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a>
-					</li>
-				</ul>
-			</nav>
-			<div class="burger-menu">
-				<i class="fa fa-bars burger"></i>
-			</div>
 		</header>
-		<section class="banner">
+			<section class="banner">
 			<img src="images/img-home-banner.jpg" alt="Banner de ofertas" />
 		</section>
 		<main>
@@ -177,33 +177,32 @@
 			</section>
 		</main>
 		<footer>
-			<div class="credit_card">
-				<i class="fas fa-credit-card"></i>
-				<h4>Pagá con tarjeta o en efectivo</h4>
-				<p class="">
-					Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
-					efectivo en puntos de pago. ¡Y siempre es seguro!
-				</p>
-			</div>
-
-			<div class="gift">
-				<i class="fas fa-gift"></i>
-				<h4>Envío gratis desde $ 2.500</h4>
-				<p>
-					Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
-					miles de productos. Es un beneficio de Mercado Puntos.
-				</p>
-			</div>
-
-			<div class="securityIcon">
-				<i class="fas fa-user-shield"></i>
-				<h4>Seguridad, de principio a fin</h4>
-				<p>
-					¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
-					hacer, porque estás siempre protegid@.
-				</p>
-			</div>
-
+			<section>
+				<div class="credit_card">
+					<i class="fas fa-credit-card"></i>
+					<h4>Pagá con tarjeta o en efectivo</h4>
+					<p class="foot-options">
+						Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
+						efectivo en puntos de pago. ¡Y siempre es seguro!
+					</p>
+				</div>
+				<div class="gift">
+					<i class="fas fa-gift"></i>
+					<h4>Envío gratis desde $ 2.500</h4>
+					<p class="foot-options">
+						Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
+						miles de productos. Es un beneficio de Mercado Puntos.
+					</p>
+				</div>
+				<div class="securityIcon">
+					<i class="fas fa-user-shield"></i>
+					<h4>Seguridad, de principio a fin</h4>
+					<p class="foot-options">
+						¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
+						hacer, porque estás siempre protegid@.
+					</p>
+				</div>
+			</section>
 			<p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
 		</footer>
 	</body>
