--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,7 +19,7 @@ div.top-header{
     padding: 5%;
 }
 div.top-header p{
-    font-size: 18px;
+    font-size: 20px;
 }
 
 header{
@@ -53,12 +53,14 @@ header .form .input{
     outline: none;
     color: #666;
     padding: 2px;
+    width: 30%;
 }
 header .form .submit{
     background-color: #FFF;
     border: 1px solid #000;
     color: #666;
-    width: 10%;
+    width: 2%;
+    padding: 2px;
 }
 
 header div.top-header p{
@@ -217,6 +219,25 @@ article div {
     article{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
+    header nav{
+        display: none;
+    }  
+   div.products{
+        display: flex;
+        flex-wrap: wrap; 
+        justify-content: space-between;
+    }
+    article{
+        width: 40%;
+    }
+    footer p.foot-options{
+        font-size: 13px;
+    }
+}
+@media (min-width: 769px){
+    article{
+        width: 20%;
+    }
     div.burger-menu{
         display: none;
     }
@@ -234,7 +255,11 @@ article div {
         text-decoration: none;
         display: inline-block;
         padding: 5px;
-        font-size: 12px;
+        margin-right: 15px;
+        font-size: 16px;
+    }
+    header ul li a:hover{
+        color: #666;
     }
     .main-navbar ul .navbar-1{
         display: flex;
@@ -243,22 +268,6 @@ article div {
     .main-navbar ul .navbar-2{
         display: flex;
         justify-content: flex-end;
-    }
-   div.products{
-        display: flex;
-        flex-wrap: wrap; 
-        justify-content: space-between;
-    }
-    article{
-        width: 40%;
-    }
-    footer p.foot-options{
-        font-size: 13px;
-    }
-}
-@media (min-width: 769px){
-    article{
-        width: 20%;
     }
     article h4.description{
         color: white;
