--- a/views/home.html
+++ b/views/home.html
@@ -23,9 +23,11 @@
 							alt="Logo de MercadoLiebre"
 						/>
 					</div>
-					<div class="form" action="#" method="GET">
-						<div class="input">Buscar productos, marcas y más</div>
-						<div class="submit"><i class="fa fa-search"></i></div>
+					<div>
+						<form action="/" method="GET" class="form">
+							<input type="text" name="busqueda" placeholder="Buscar productos, marcas y más" class="input">
+							<button type="submit" class="submit"><i class="fa fa-search"></i></button>	
+						</form>
 					</div>
 					<p>
 						<i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta
