--- a/views/register.html
+++ b/views/register.html
@@ -18,10 +18,10 @@
 		<header class="register-header">
 			<div class="top-header">
 				<div class="logo">
-					<img
+					<a href="/"><img
 						src="images/logo-mercado-liebre.svg"
-						alt="Logo de MercadoLiebre"
-					/>
+						alt="Logo de MercadoLiebre" 
+					/></a>
 				</div>
 				<div>
 					<form action="/" method="GET" class="form">
@@ -62,17 +62,17 @@
 		<main>
 			<form action="/" method="GET" class="create-form">
                 <div class="control-formulario">
-                    <input type="text" name="nombreCompleto" placeholder="Nombre de usuario" class="control" >
+                    <input type="text" name="nombreCompleto" placeholder="Nombre de usuario" class="control">
                 </div>
                 <div class="control-formulario">
-                    <input type="text" name="usuario" placeholder="Nombre de usuario" class="control" >
+                    <input type="text" name="usuario" placeholder="Nombre de usuario" class="control">
                 </div>
                 <div class="control-formulario">
                     <label>Fecha de nacimiento:</label>
-                    <input type="date" name="fechaNacimiento" class="control" >
+                    <input type="date" name="fechaNacimiento" class="control">
                 </div>
                 <div class="control-formulario">
-                    <input type="text" name="domicilio" placeholder="Domicilio" class="control" >
+                    <input type="text" name="domicilio" placeholder="Domicilio" class="control">
                 </div>
                 <div class="control-formulario">
                     <label>Perfil del usuario:</label>
