--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,6 +51,7 @@ header .form .input{
     background-color: #FFF;
     border: 1px solid #000;
     outline: none;
+    border-radius: 10px;
     color: #666;
     padding: 2px;
     width: 30%;
@@ -59,7 +60,8 @@ header .form .submit{
     background-color: #FFF;
     border: 1px solid #000;
     color: #666;
-    width: 2%;
+    width: 5%;
+    border-radius: 10px;
     padding: 2px;
 }
 
@@ -198,12 +200,12 @@ article div {
     border-radius: 5px;
 }
 .login-button{
-    width: 100%;
+    width: 30%;
     background-color: #1259c3; 
     color: white;
     padding: 8px;
     border-radius: 5px;
-    margin: auto;
+    margin-top: 30px;
 }
 
 @media (max-width: 360px){
@@ -284,6 +286,7 @@ article div {
         display: flex;
         justify-content: space-around;
         padding-top: 20px;
+        margin-top: 100px;
     }
     footer .credit_card:hover i{
         color: cornflowerblue;
@@ -298,6 +301,12 @@ article div {
         margin-top: 20px;
     }
     .login-button:hover{
+        background-color: #0022AA;
+    }
+    div .form .submit:hover{
+        color: rgb(177, 177, 177);
+    }
+    form .general-button:hover{
         background-color: #0022AA;
     }
 }
