--- a/views/home.html
+++ b/views/home.html
@@ -18,10 +18,10 @@
 		<header>
 				<div class="top-header">
 					<div class="logo">
-						<img
+						<a href="/"><img
 							src="images/logo-mercado-liebre.svg"
-							alt="Logo de MercadoLiebre"
-						/>
+							alt="Logo de MercadoLiebre" 
+						/></a>
 					</div>
 					<div>
 						<form action="/" method="GET" class="form">
